--- a/configs/networkmanager-dmenu/config.ini
+++ b/configs/networkmanager-dmenu/config.ini
@@ -1,4 +1,7 @@
 [dmenu]
+fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
+dmenu_command = /usr/bin/rofi -theme test
+rofi_highlight = True
 # dmenu_command = /usr/bin/dmenu
 # # Note that dmenu_command can contain arguments as well like:
 # # `dmenu_command = rofi -dmenu -i -theme nmdm`
