--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -64,7 +64,7 @@ font-2 = "JetBrainsMono Nerd Font"
 
 modules-left = i3
 modules-center = xwindow media media-previous media-play media-next
-modules-right = pulseaudio xkeyboard wlan battery date
+modules-right = pulseaudio xkeyboard wlan battery date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -334,15 +334,21 @@ interface-type = wireless
 ifexists = true
 format-connected = <label-connected> <ramp-signal>
 ; format-diconnected = <label-connected>
-; click-left= nm-applet
 ; label-connected = %essid%
-label-connected = %{A1:nm-connection-editor:}%essid%%{A}
+
+label-connected = "%{A1:~/.bin/networkmanager_dmenu &:}%essid%%{A}"
 
 ramp-signal-0 = 󰤯
 ramp-signal-1 = 󰤟
 ramp-signal-2 = 󰤢
 ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
+
+[module/whoami]
+type = custom/script
+exec = whoami
+interval = 5 ; Refresh every hour, adjust as needed
+label = "%output%"
 
 
 
