Aggiunto Dunst e pulito altre cose

--- a/configs/gtk-2.0/gtkfilechooser.ini
+++ b/configs/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=path-bar
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=876
-GeometryY=499
+GeometryX=874
+GeometryY=497
 GeometryWidth=780
 GeometryHeight=585
-SortColumn=modified
+SortColumn=name
 SortOrder=descending
 StartupMode=recent
