--- a/configs/kitty/current-theme.conf
+++ b/configs/kitty/current-theme.conf
@@ -6,7 +6,7 @@
 ## blurb: A modified version of Gruvbox with softer contrasts
 
 background #262726
-foreground #E8D6B9
+foreground #EBDBB2
 
 selection_background #D4BE98
 selection_foreground #262726
