--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -18,20 +18,44 @@
 
 [colors]
 background = #262726
-background-alt = #E8D6B9 
-foreground = #E8D6B9
+background-alt = #EBDBB2 
+foreground = #EBDBB2
 foreground-alt = #262726
 red = #362726
 
+[bar/mybar2]
+width = 30%
+height = 33pt
+radius = 10
+offset-x = 70%
 
+background = ${colors.background-alt}
+foreground = ${colors.foreground-alt}
 
+; line-size = 3pt
+; border-size = 0
+; border-color = #00000000
+padding-left = 0
+padding-right = 0
+module-margin = 2
+
+font-0 = "JetBrainsMono NF ExtraBold:size=13;3"
+font-1 = "JetBrainsMono Nerd Font:size=13;3"
+font-2 = Inter
+; font-1 = 
+
+modules-left = pulseaudio xkeyboard 
+modules-center = wlan  
+modules-right = battery date 
+override-redirect = true
 
 [bar/mybar]
 width = 100%
-height = 30pt
-radius = 0
+height = 33pt
+radius = 10
 
-monitor = DP-2
+
+; monitor = DP-2
 
 ; dpi = 100
 
@@ -46,12 +70,14 @@ padding-right = 0
 module-margin = 2
 
 font-0 = "JetBrainsMono Nerd Font:size=13;4" 
-font-1 = Inter
-font-2 = "JetBrainsMono Nerd Font"
+font-1 = "JetBrainsMono NF ExtraBold:size=17;4"
+font-2 = "My Font:size=25;10"
+font-3 = Inter
+
 
 modules-left = i3
 modules-center = xwindow media media-previous media-play media-next
-modules-right = pulseaudio xkeyboard wlan battery date 
+
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -85,10 +111,10 @@ ws-icon-5 = 0;10 
 ws-icon-default = 
 
 
-label-focused = %icon%
+label-focused =%{T3}⦉%{T-}%{T2} %icon% %{T-} %{T3}⦊%{T-}
 label-focused-background = ${colors.background-alt}
 label-focused-foreground = ${colors.foreground-alt}
-label-focused-padding = 2
+label-focused-padding = 0
 
 label-urgent = %icon%
 label-urgent-background = ${colors.red}
@@ -123,8 +149,8 @@ click-left = playerctl next
 type = custom/script
 interval = 1
 format-prefix = "  "
-format-foreground = ${colors.foreground-alt}
-format-background = ${colors.background-alt}
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
 
 format = <label>
 format-padding = 2
@@ -150,27 +176,26 @@ label = %title:0:45s:...%
 type = internal/pulseaudio
 
 use-ui-max = false
-
-format-volume = <ramp-volume> <label-volume>
-ramp-volume-foreground = ${colors.foreground}
+format-volume = <ramp-volume><label-volume>
+ramp-volume-foreground = ${colors.foreground-alt}
 
 label-volume = %percentage%%
 
 label-muted = 婢 Muted
 label-muted-foreground = ${colors.disabled}
 
-ramp-volume-0 = 奄 
-ramp-volume-1 = 奔
-ramp-volume-2 = 奔
-ramp-volume-3 = 奔
-ramp-volume-4 = 奔
-ramp-volume-5 = 墳
-ramp-volume-6 = 墳
-ramp-volume-7 = 墳
-ramp-volume-8 = 墳
-ramp-volume-9 = 墳
-ramp-volume-10 = 墳
-
+ramp-volume-0 = "  "
+ramp-volume-1 = "  "
+ramp-volume-2 = "  "
+ramp-volume-3 = "  "
+ramp-volume-4 = "  "
+ramp-volume-5 = "  "
+ramp-volume-6 = "  "
+ramp-volume-7 = "  "
+ramp-volume-8 = "  "
+ramp-volume-9 = "  "
+ramp-volume-10 ="  "
+ 
 click-right = pavucontrol
 
 
@@ -182,30 +207,42 @@ blacklist-1 = scroll lock
 
 label-layout = "%layout%"
 format-prefix =  "  "
-format-prefix-foreground = ${colors.foreground} 
-label-layout-foreground = ${colors.foreground}
+format-prefix-foreground = ${colors.foreground-alt} 
+label-layout-foreground = ${colors.foreground-alt}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.background-alt}
+; label-indicator-padding = 0
+; label-indicator-margin = 0
+label-indicator-foreground = ${colors.background-alt}
+label-indicator-background = ${colors.background}
 
 
 [module/date]
 type = internal/date
-interval = 1
+interval = 60  ; Update every minute
 
-date = %a %I:%M %p 
-date-alt = %d/%d/%Y
+; Format to display day, date, month, and time
+date = %a %H:%M
+date-alt = %d/%m/%Y
 
-label = %date%
-label-foreground = ${colors.foreground}
+; Define the main format of the date module
+format = <label>
+format-padding = 0  ; Padding for aesthetics
 
-format = %{A3:gnome-calendar:} <label> %{A}
-# format-prefix = "" 
-format-prefix-foreground = ${colors.foreground}
+; Defining label properties
+label = %{A1:gnome-calendar:} %date% %{A}
+label-foreground = ${colors.foreground-alt}
+label-padding = 0  ; Padding around the date text
 
-click-right = gnome-calendar
+; Add a prefix icon (optional)
+; format-prefix = "" 
+; format-prefix-foreground = ${colors.foreground-alt}
+
+; Click action to open calendar application
+click-left = gnome-calendar
+
+; Hover action (optional): When hovered, show the date in date-alt format
+; label-underline = ${colors.foreground-alt}  ; Add an underline on hover (optional)
+
 
 [settings]
 screenchange-reload = true
@@ -223,15 +260,15 @@ battery = BAT0
 adapter = ACAD
 
 ; plugged icon 
-format-charging = <animation-charging>   <label-charging>
-format-discharging = <ramp-capacity>   <label-discharging>
+format-charging = <label-charging> <animation-charging>   
+format-discharging = <label-discharging> <ramp-capacity>   
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
 
 format-full = <label-full>
 format-full-prefix = "   "
-format-full-prefix-foreground = ${colors.foreground}   
+format-full-prefix-foreground = ${colors.foreground-alt}   
 format-low = <label-low> <ramp-capacity>
 
 label-full = %percentage%%
@@ -249,7 +286,7 @@ ramp-capacity-7 = 
 ramp-capacity-8 =  
 ramp-capacity-9 =   
 ramp-capacity-10 =  
-ramp-capacity-foreground = ${colors.foreground}  
+ramp-capacity-foreground = ${colors.foreground-alt}  
 
 ; Only applies if <animation-charging> is used
 animation-charging-0 = 
@@ -258,7 +295,7 @@ animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 1000
-animation-charging-foreground = ${colors.foreground}
+animation-charging-foreground = ${colors.foreground-alt}
 
 ; Only applies if <animation-discharging> is used
 animation-discharging-0 = 
@@ -281,8 +318,8 @@ poll-interval = 5
 [network-base]
 type = internal/network
 interval = 1
-;format-disconnected = <label-disconnected>
-;label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+format-disconnected = <label-disconnected>
+label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 ;label-disconnected =
 
 [module/wlan]
@@ -291,17 +328,16 @@ interval = 1
 interface = wlp9s0
 interface-type = wireless
 ifexists = true
-format-connected = <label-connected> <ramp-signal>
-; format-diconnected = <label-connected>
-; label-connected = %essid%
+format-connected = <label-connected> <ramp-signal>  
+format-diconnected = <label-disconnected>
+label-disconnected = "%{A1:networkmanager_dmenu &:}Disconnected%{A}"
+label-connected = "%{A1:networkmanager_dmenu &:}%essid%%{A}"
 
-label-connected = "%{A1:~/.bin/networkmanager_dmenu &:}%essid%%{A}"
-
-ramp-signal-0 = 󰤯
-ramp-signal-1 = 󰤟
-ramp-signal-2 = 󰤢
-ramp-signal-3 = 󰤥
-ramp-signal-4 = 󰤨
+ramp-signal-0 = "󰤯 " 
+ramp-signal-1 = "󰤟 " 
+ramp-signal-2 = "󰤢 " 
+ramp-signal-3 = "󰤥 " 
+ramp-signal-4 = "󰤨 " 
 
 
 
