--- a/configs/networkmanager-dmenu/config.ini
+++ b/configs/networkmanager-dmenu/config.ini
@@ -1,6 +1,6 @@
 [dmenu]
 fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
-dmenu_command = /usr/bin/rofi -theme test
+dmenu_command = rofi
 rofi_highlight = True
 # dmenu_command = /usr/bin/dmenu
 # # Note that dmenu_command can contain arguments as well like:
